# orig-bot

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pnpm-lock.yaml
.github/workflows/: docker.yml
backend/: Dockerfile  README.md  env.example  pyproject.toml
backend/src/api/: document_routes.py
backend/src/core/: config.py  graph.py
backend/src/intent/: slot_pipeline.py
backend/src/services/: document_service.py
backend/src/tools/: registry.py
backend/src/tools/sql/: mysql_base.py
frontend/: Dockerfile  README.md  env.example  middleware.ts  next.config.mjs  package.json
frontend/app/: MyRuntimeProvider.tsx  globals.css  page.tsx
frontend/app/api/[..._path]/: route.ts
frontend/app/api/auth/guest/: route.ts
frontend/app/api/chat/stream/: route.ts
frontend/app/api/conversations/: route.ts
frontend/app/api/conversations/[id]/share/: route.ts
frontend/app/api/preview/image/: route.ts
frontend/app/api/preview/pdf/: route.ts
frontend/app/chat/[id]/: ClientPage.tsx  layout.tsx
frontend/app/hooks/: useDictation.ts
frontend/app/voice/: page.tsx
frontend/components/layout/: AppShell.tsx  Sidebar.tsx
frontend/components/ui/: image-viewer.tsx  pdf-viewer.tsx
frontend/lib/: basePath.ts  chatApi.ts  withAuthHeaders.ts
